<resources>
    <string name="app_name">School Database</string>

    <!--Index Page-->
    <string name="index_title">Welcome to Database University</string>
    <string name="index_register_header">Register</string>
    <string name="index_register_parent">Register as Parent</string>
    <string name="index_register_student">Register as Student</string>
    <string name="index_login_header">Login</string>
    <string name="index_login_parent">Login as Parent</string>
    <string name="index_login_student">Login as Student</string>

    <!--Registration Page-->
    <string name="email_hint">Email</string>
    <string name="parent_email_hint">Parent Email</string>
    <string name="password_hint">Password</string>
    <string name="password_confirm_hint">Confirm Password</string>
    <string name="select_role">Select Role</string>
    <string name="none">None</string>
    <string name="mod">Moderator</string>
    <string name="mentee">Mentee</string>
    <string name="mentor">Mentor</string>
    <string name="mm_both">Both Mentee and Mentor</string>
    <string name="select_grade">Select Grade</string>
    <string name="freshman">Freshman</string>
    <string name="sophomore">Sophomore</string>
    <string name="junior">Junior</string>
    <string name="senior">Senior</string>
    <string name="name_entry">Name</string>
    <string name="phone_entry">Phone</string>
    <string name="city_entry">City</string>
    <string name="state_entry">State</string>
    <string name="register">Register</string>

    <!--Login Page-->
    <string name="login">Login</string>
    <string name="login_register_parent">Click here to Register as Parent</string>
    <string name="login_register_student">Click here to Register as Student</string>

    <!--Dashboard-->
    <string name="dashboard">Dashboard</string>
    <string name="welcome">Welcome, </string>
    <string name="dashboard_grade">Your grade level is </string>
    <string name="change_profile">Change Profile</string>
    <string name="change_profile_child">Change Child\'s Profile</string>
    <string name="view_sections">View Sections</string>
    <string name="view_schedule">View Schedule</string>
    <string name="moderator_status">View Moderator Status</string>
    <string name="view_mentor_status">View Mentor Status</string>
    <string name="view_mentee_status">View Mentee Status</string>
    <string name="logout">Logout</string>

    <!--Select Child Profile-->
    <string name="select_child">Select Child</string>
    <string name="no_children_found">No children found</string>

    <!--Mentor/Mentee Status-->
    <string name="mentor_status">Mentor Status</string>
    <string name="mentor_no_sections">You are not currently a mentor for any sections.</string>
    <string name="mentee_status">Mentee Status</string>
    <string name="mentee_no_sections">You are not currently a mentee for any sections.</string>
    <string name="mod_status">Moderator Status</string>
    <string name="mod_no_sections">You are not currently a moderator for any sections.</string>
    <string name="no_mentors_found">No mentors found</string>
    <string name="no_mentees_found">No mentees found</string>

    <!--View Schedule-->
    <string name="schedule_header">My Schedule</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="time_8am">8:00 AM</string>
    <string name="time_9am">9:00 AM</string>
    <string name="time_10am">10:00 AM</string>
    <string name="time_11am">11:00 AM</string>
    <string name="time_12pm">12:00 PM</string>
    <string name="time_1pm">1:00 PM</string>
    <string name="time_2pm">2:00 PM</string>
    <string name="time_3pm">3:00 PM</string>
    <string name="time_4pm">4:00 PM</string>
    <string name="time_5pm">5:00 PM</string>
    <string name="time_6pm">6:00 PM</string>
    <string name="time_7pm">7:00 PM</string>

    <!--View Section Info-->
    <string name="section">Section</string>
    <string name="description">Description</string>
    <string name="user_type">User Type</string>
    <string name="time_slot">Time Slot</string>
    <string name="date_range">Dates</string>
    <string name="unknown">Unknown</string>
</resources>
