<?xml version="1.0" encoding="utf-8"?>
<android.widget.ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterStudent">

        <EditText
            android:id="@+id/email_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="14dp"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/pass_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/parent_email_reg" />

        <EditText
            android:id="@+id/pass_confirm_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/password_confirm_hint"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/pass_reg" />

        <RadioGroup
            android:id="@+id/role_select_reg"
            android:layout_width="wrap_content"
            android:layout_height="88dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:checkedButton="@+id/none_button_reg"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/pass_confirm_reg">

            <RadioButton
                android:id="@+id/mentee_button_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mentee" />

            <RadioButton
                android:id="@+id/mentor_button_reg"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mentor" />

            <RadioButton
                android:id="@+id/mm_both_button_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mm_both" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/email_hint"
            android:textAlignment="textEnd"
            app:layout_constraintBaseline_toBaselineOf="@+id/email_reg"
            app:layout_constraintEnd_toStartOf="@+id/guideline2" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/password_hint"
            android:textAlignment="textEnd"
            app:layout_constraintBaseline_toBaselineOf="@+id/pass_reg"
            app:layout_constraintEnd_toStartOf="@+id/guideline2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="8dp"
            android:text="@string/select_role"
            android:textAlignment="textEnd"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:singleLine="false"
            android:text="@string/password_confirm_hint"
            android:textAlignment="textEnd"
            app:layout_constraintBaseline_toBaselineOf="@+id/pass_confirm_reg"
            app:layout_constraintEnd_toStartOf="@+id/guideline2" />

        <EditText
            android:id="@+id/name_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/name_entry"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/role_select_reg" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/name_entry"
            android:textAlignment="textEnd"
            app:layout_constraintBaseline_toBaselineOf="@+id/name_reg"
            app:layout_constraintEnd_toStartOf="@+id/guideline2" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/phone_entry"
            android:textAlignment="textEnd"
            app:layout_constraintBaseline_toBaselineOf="@+id/phone_reg"
            app:layout_constraintEnd_toStartOf="@+id/guideline2" />

        <EditText
            android:id="@+id/phone_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/phone_entry"
            android:inputType="phone"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/name_reg" />

        <EditText
            android:id="@+id/city_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/city_entry"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/phone_reg" />

        <EditText
            android:id="@+id/state_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/state_entry"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/city_reg" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/city_entry"
            android:textAlignment="textEnd"
            app:layout_constraintBaseline_toBaselineOf="@+id/city_reg"
            app:layout_constraintEnd_toStartOf="@+id/guideline2" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/state_entry"
            android:textAlignment="textEnd"
            app:layout_constraintBaseline_toBaselineOf="@+id/state_reg"
            app:layout_constraintEnd_toStartOf="@+id/guideline2" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="161dp" />

        <Button
            android:id="@+id/register_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:onClick="postRegisterParent"
            android:text="@string/register"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/state_reg" />

        <EditText
            android:id="@+id/parent_email_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/parent_email_hint"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/email_reg" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/parent_email_hint"
            android:textAlignment="textEnd"
            app:layout_constraintBaseline_toBaselineOf="@+id/parent_email_reg"
            app:layout_constraintEnd_toStartOf="@+id/guideline2" />
    </android.support.constraint.ConstraintLayout>
</android.widget.ScrollView>